<!--
 Copyright 2016 Kosrat D. Ahmed

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software

 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>

    <!-- empty stock list-->
    <string name="empty_stock_list">No stock information available.</string>
    <string name="empty_stock_list_no_network">No stock information available. The network is not available to fetch stock data.</string>
    <string name="empty_stock_list_server_down">No stock information available. The server is not returning data.</string>
    <string name="empty_stock_list_server_error">No stock information available. The server is not returning valid data. Please check for an updated version of Stock Hawk.</string>
    <string name="pref_stock_status_key" translatable="false">stock-status</string>
    <string name="invalid_stock_symbol">Stock symbol not found</string>

    <string name="symbol_detail" formatted="true" translatable="false">%s Detail</string>

    <!--stock detail extra titles -->
    <string name="stock_detail_extra_symbol">Stock Symbol</string>
    <string name="stock_detail_extra_name">Stock Name</string>
    <string name="stock_detail_extra_first">First Trade</string>
    <string name="stock_detail_extra_last">Last Trade</string>
    <string name="stock_detail_extra_currency">Currency</string>
    <string name="stock_detail_extra_bid">Bid Price</string>

    <string name="pref_historic_status_key" translatable="false">historic-status</string>

    <string name="no_data_show">Can\'t show you data over time!</string>
    <string name="retry">RETRY</string>
    <string name="empty_view_text">Stocks Data not available!</string>
    <string name="data_error_json">Looks like it\'s our fault!</string>
    <string name="data_no_internet">Internet Connection is required!</string>
    <string name="data_server_down">The Yahoo! Server is not responding properly!</string>
    <string name="data_no_error">No errors!</string>
    <string name="widget_title">Stock Hawk</string>
    <string name="title_widget_detail">Stock Hawk Detail</string>

    <!-- content description-->
    <string name="stock_symbol_content_description">Stock Symbol</string>
    <string name="bid_price_content_description">Bid price</string>
    <string name="change_content_description">Change </string>
    <string name="graph_content_description">Graph showing prices of the stock over time!</string>
    <string name="add_stock_content_description">Add new stock symbol</string>
    <string name="saved_stock">This stock is already saved!</string>

</resources>